# inclave

./: .env.example  .gitignore  CONTRIBUTING.md  DESKTOP_PLAN.md  LICENSE  LOCAL_CODEGEN_ROADMAP.md  NOTICE  PHASE1_2_PLAN.md  PHASE1_PLAN.md  PROJECT_PLAN.md  READING_LIST.md  README.md  app.py  basarili_kodlar_raporu.txt  clear_cache.py  cli.py  demo.tape  install.sh  main.py  make_test_data.py  package.json  playground.py  pnpm-lock.yaml  pyproject.toml  requirements.txt  run_eval.py  streamlit_demo.py  turbo.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/internal/: PROJECT_PLAN.md
.github/internal/tasks/: EMRE.md  ULGAC.md
.github/workflows/: ci.yml  pr-agent.yml  release-desktop.yml
apps/desktop/: README.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/scripts/: build-sidecar.sh
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  menu.rs  sidecar.rs
apps/desktop/src/components/: CodeBlock.tsx  FileIcon.tsx  Logo.tsx  Markdown.tsx  SandboxCard.tsx  Sidebar.tsx  StatusBar.tsx  Titlebar.tsx
apps/desktop/src/components/ui/: button.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  primitives.tsx
apps/desktop/src/features/chat/: Composer.tsx  Transcript.tsx
apps/desktop/src/features/models/: ModelMenu.tsx
apps/desktop/src/features/onboarding/: Onboarding.tsx
apps/desktop/src/features/palette/: CommandPalette.tsx
apps/desktop/src/features/settings/: Settings.tsx
apps/desktop/src/hooks/: useFileDrop.ts
apps/desktop/src/lib/: highlighter.ts  ipc.ts  mock.ts  utils.test.ts  utils.ts
apps/desktop/src/stores/: chat.test.ts  chat.ts  models.ts  sessions.ts  system.ts  workspace.ts
apps/desktop/src/styles/: globals.css
data/knowledge/: pandas_csv_patterns.md
data/sample_csvs/: employees.csv  messy_data.csv  sales_data.csv  sales_data_cleaned.csv  test_veri.csv  titanic.csv  weather.csv
demo-data/: README.md  demo.tape  mrr_2026.csv
docs/: architecture-roadmap.excalidraw
packages-js/ipc-contract/: domain.ts  package.json  schema.json  tsconfig.json
packages-js/ipc-contract/scripts/: generate.mjs
results/: RESULTS.md  scenario_1.py  scenario_10.py  scenario_2.py  scenario_3.py  scenario_4.py  scenario_5.py  scenario_6.py  scenario_6_v2.py  scenario_7.py  scenario_8.py  scenario_9.py  scenario_9_v2.py
shared/enclave_core/: pyproject.toml
shared/enclave_core/src/enclave_core/: __init__.py  config.py  errors.py  workspace.py
shared/enclave_core/tests/: test_config.py  test_errors.py  test_workspace.py
shared/inclave_core/: pyproject.toml
shared/inclave_core/src/inclave_core/: __init__.py  config.py  errors.py  logging.py  sessions.py  workspace.py
shared/inclave_core/tests/: test_config.py  test_errors.py  test_logging.py  test_sessions.py  test_workspace.py
src/: cli.py  config.py  main.py
src/api/: routes.py
src/cache/: semantic_cache.py
src/csv_engine/: schema_analyzer.py
src/judge/: judge_agent.py  providers.py
src/llm/: classifier.py  code_validator.py  compre.py  executor.py  judge.py  ollama_client.py  pipeline.py  prompts.py  reviewer.py  self_healer.py
src/memory/: context.py  session.py
src/rag/: bm25_index.py  chunking.py  few_shot_store.py  hybrid_retriever.py  indexer.py  reranker.py  retriever.py
src/vectordb/: store.py
tasks/: IBRAHIM.md
tests/: test_analyzer.py  test_cache_manual.py  test_chunker.py  test_chunking.py  test_classifier_manual.py  test_cloud_judge.py  test_code_validator.py  test_hybrid_vs_vector.py  test_indexer.py  test_integration_phase1_2.py  test_judge_manual.py  test_ollama_manual.py  test_pipeline_manual.py  test_rag_manual.py  test_retriever.py  test_reviewer.py  test_schema_analyzer.py  test_schema_manual.py  test_titanic.py  test_vectordb_manual.py
