[project]
name = "enclave-code"
version = "0.0.0"
description = "Local-first, privacy-preserving CLI for macOS — sandbox + Ollama + file work"
requires-python = ">=3.12"
dependencies = [
    "enclave-cli",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "enclave-core",
    "enclave-ollama",
    "enclave-sandbox",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "shared/*"]

[tool.uv.sources]
enclave-cli = { workspace = true }
enclave-core = { workspace = true }
enclave-ollama = { workspace = true }
enclave-sandbox = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
mypy_path = [
    "packages/cli/src",
    "packages/ollama/src",
    "packages/sandbox/src",
    "shared/enclave_core/src",
]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "enclave_core.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["packages", "shared", "tests"]
addopts = "-ra"
markers = [
    "integration: requires external services (Ollama running, etc.) — opt-in",
]
pythonpath = [
    "packages/ollama/src",
    "shared/enclave_core/src"
]

[tool.coverage.run]
source = ["packages", "shared"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false


