[project]
name = "inclave"
version = "0.1.0"
description = "Local-first, privacy-preserving CLI for macOS — chat with and analyze your files using a local LLM, with sandboxed code execution."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Emre Ulgac", email = "ulgacemre@gmail.com" },
    { name = "Emre Kocyigit", email = "kocyigit.emre.30@gmail.com" },
    { name = "Ibrahim Furkan Gulcan", email = "ibrahimfurkangulcan@gmail.com" },
]
maintainers = [{ name = "Caelusway", email = "53878581+caelusway@users.noreply.github.com" }]
requires-python = ">=3.12"
keywords = ["cli", "ollama", "sandbox", "privacy", "macos", "file-analysis", "local-llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "inclave-cli",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "inclave-core",
    "inclave-ollama",
    "inclave-sandbox",
]

[project.urls]
Homepage = "https://github.com/caelusway/inclave"
Repository = "https://github.com/caelusway/inclave"
Issues = "https://github.com/caelusway/inclave/issues"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "shared/*"]

[tool.uv.sources]
inclave-cli = { workspace = true }
inclave-core = { workspace = true }
inclave-ollama = { workspace = true }
inclave-sandbox = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Typer commands intentionally use `typer.Option(...)` / `typer.Argument(...)`
# as defaults — that's the framework's API.
"packages/cli/src/inclave_cli/main.py" = ["B008"]
# Markdown headers in our parser intentionally use the multiplication sign.
"packages/cli/src/inclave_cli/files.py" = ["RUF001"]
# UI uses non-ASCII glyphs (›, ●, …, ✓, ✗) by design.
"packages/cli/src/inclave_cli/ui.py" = ["RUF001"]
"packages/cli/src/inclave_cli/chat.py" = ["RUF001"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
mypy_path = [
    "packages/cli/src",
    "packages/ollama/src",
    "packages/sandbox/src",
    "shared/inclave_core/src",
]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "inclave_core.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openpyxl", "openpyxl.*", "pypdf", "pypdf.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["packages", "shared", "tests"]
addopts = "-ra"
markers = [
    "integration: requires external services (Ollama running, etc.) — opt-in",
]
pythonpath = [
    "packages/cli/src",
    "packages/ollama/src",
    "packages/sandbox/src",
    "shared/inclave_core/src",
]

[tool.coverage.run]
source = ["packages", "shared"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false


