[project]
name = "enclave-core"
version = "0.0.0"
description = "Shared types, errors, and config schema for enclave-code packages"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enclave_core"]

[tool.mypy]
mypy_path = [
    "packages/cli/src",
    "packages/ollama/src",
    "packages/sandbox/src",
    "shared/enclave_core/src",   # ← enclave_core buradan bulunur
]
explicit_package_bases = true
