[project]
name = "enclave-core"
version = "0.0.0"
description = "Shared types, errors, and config schema for enclave-code packages"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enclave_core"]


