[project]
name = "inclave-core"
version = "0.1.0"
description = "Shared types, errors, and config schema for inclave packages"
license = { text = "Apache-2.0" }
authors = [
    { name = "Emre Ulgac", email = "ulgacemre@gmail.com" },
    { name = "Emre Kocyigit", email = "kocyigit.emre.30@gmail.com" },
    { name = "Ibrahim Furkan Gulcan", email = "ibrahimfurkangulcan@gmail.com" },
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inclave_core"]


