[package]
name = "inclave-desktop"
version = "0.1.0"
description = "InClave — local-first AI desktop app for macOS"
authors = ["InClave Authors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "inclave_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
